# client-server_boost.asio

./: CMakeLists.txt  README.md
include/: ServerSettings.hpp  StringExt.hpp  client.hpp  project_types.hpp  server.hpp  strmanip.hpp
src/: StringExt.cpp  strmanip.cpp
src/Client/: client  client.cpp  main.cpp
src/Server/: main  main.cpp  server  server.cpp
